Istio-Routing/quarkushello-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: quarkushello-v1
  labels:
    app: quarkushello
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: quarkushello
    version: v1
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: quarkushello-v1
  labels:
    version: v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: quarkushello
        version: v1
    spec:
      containers:
      - name: quarkushello
        image: gcr.io/moses-k8/sash-quarkus-hello:1.0.0
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: IfNotPresent #Always
        ports:
        - containerPort: 8080
---
